# Legal_Voice_Assistant

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.cursor/rules/: mcp-first-gsd-protocol.mdc
config/rag/: deflection_scripts.json  intake_guidelines.md
docs/ai_config/: gemini_prompts_rag.md
docs/api_and_deployment/: README.md  api_endpoints.md  deployment_guide.md
docs/setup/: twilio_media_streams.md
migrations/: env.py
migrations/versions/: 20260305_0000_create_intake_call_table.py
scripts/: verify_crud.py
src/: __init__.py  database.py  main.py
src/api/: __init__.py  auth.py  calls.py
src/models/: __init__.py  intake_call.py
src/nodejs/: Dockerfile  gemini_client.js  gemini_client.test.js  gemini_prompt_manager.js  gemini_prompt_manager.test.js  greeting.js  greeting.test.js  index.js  package-lock.json  package.json  stt_client.js  stt_client.test.js  tone_adjuster.js  tone_adjuster.test.js  tts_client.js  tts_client.test.js  upl_detector.js  upl_detector.test.js  vad.js  vad.test.js  websocket_server.js  websocket_server.test.js
tests/: __init__.py  test_intake_call_crud.py
